2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-dialog.c (gweather_dialog_create):
	
	Set the correct accessible name. Fixes bug #134932.

	Patch by: Muktha  <muktha.narayan@wipro.com>

2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-applet.c (clicked_cb):

	Single click to popup forecast:
	http://developer.gnome.org/projects/gup/hig/1.0/userinput.html#mouse-interaction-applets

2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-dialog.c (gweather_dialog_open):

	Present the forecast dialog when it's reselected
	from the applet.

2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-pref.c (gweather_pref_create):
	
	Set the preference window resizeable flag to FALSE.

	Fixes bug: 144032.

2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>

	* weather.h (_WeatherLocation): Added flag to track if zone information is 
	valid.

	* weather.c (weather_location_new): Set zone validity flag from information
	in Locations file.

	* gweather-dialog.c (gweather_dialog_create): Only display forecast tab if
	zone entry is valid.

	(gweather_dialog_update): Only update forecast tab, if the zone entry is
	valid.
	
	Patch by: Gareth Owen  <gowen72@yahoo.com>
	
	Fixes bug #97593.

2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-pref.c: HIG fixes for the treeview.

	Patch by: Ross Burton  <r.burton@180sw.com>

	Fixes bug: #144027.

2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>
	* gweather-pref.c: Portability fixes for the IBM C compiler.

2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>
	Fix for transparant radar images.

	Patch by: Gareth Owen  <gowen72@yahoo.com>

	Fixes bug #139216.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	* weather.c (weather_info_config_read):
	Initializing some variables to fix crasher on
	location change.

	Patch by: Gareth Owen  <gowen72@yahoo.com>

	Fixes bug #143869.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>
