@@ -1,3 +1,12 @@
+2004-06-16  Dennis Smit  <ds@nerds-incorporated.org>
+
+	* gweather-dialog.c (gweather_dialog_create):
+	Added scrollbars to the radar map.
+
+	Patch by: S.SanthoshKumar  <santhu842k2@yahoo.co.in>
+
+	Fixes bug #97047.
+
 2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>
 
 	* gweather-dialog.c (gweather_dialog_create):
